# licenses-catalog

./: README.md  pyproject.toml
.github/workflows/: python-release.yml  python-test.yml
data/: rules.json
data/licenses/: CC-BY-2.0.json  CC-BY-3.0.json  CC-BY-4.0.json  CC-BY-NC-4.0.json  CC-BY-NC-SA-4.0.json  CC-BY-ND-2.0.json  CC-BY-SA-3.0.json  CC-BY-SA-4.0.json  CC0-1.0.json  CDLA-Permissive-2.0.json  DL-DE-BY-2.0.json  ODbL-1.0.json  OGL-UK-3.0.json  PDDL-1.0.json  etalab-2.0.json
docs/: CONTRIBUTING.md  RULES.md
docs/classification/: SYSTEM_PROMPT.md  USER_PROMPT.md
scripts/: README.md  classify_license.py  classify_license.sh  licenses_tags.py  merge_spdx_with_choosealicense.py  requirements.txt  sync_package_data.py
src/licenses_aas/: __init__.py  classify_license.py
src/licensing/: __init__.py  inspect_licenses.py  merge_spdx_with_choosealicense.py
src/licensing/classify/: __init__.py  classify_license.py  license_tags.py
src/licensing/classify/data/: SYSTEM_PROMPT.md  USER_PROMPT.md  rules.json  tags.json
src/licensing/classify/data/examples/: CC-BY-2.0.json  CC-BY-3.0.json  CC-BY-4.0.json  CC-BY-NC-4.0.json  CC-BY-NC-SA-4.0.json  CC-BY-ND-2.0.json  CC-BY-SA-3.0.json  CC0-1.0.json  CDLA-Permissive-2.0.json  etalab-2.0.json
tests/: test_classify_license.py  test_license_tags.py
